Fixed truncation bugs.

--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -128,7 +128,6 @@ header {
             row-gap: 20px;
 
             &__box {
-                // width: 440px;
                 background-color: #FEFEFE;
                 border-radius: 1em;
                 box-shadow: 5px 5px 7px #d6d3d3;
@@ -143,6 +142,7 @@ header {
                     .details {
                         flex-grow: 1;
                         padding: 10px;
+                        white-space: nowrap;
 
                         h3 {
                             font-size: 17px;
@@ -200,7 +200,7 @@ header {
                         .details {
                             width: 200px;
                             overflow: hidden;
-                            white-space: nowrap;
+                            // white-space: nowrap;
                             text-overflow: ellipsis;
                         }
 
